# ecg-arrhythmia-detection

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CITATION.cff  Dockerfile  LICENSE  Makefile  README.md  config.yaml  download_data.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: streamlit_app.py
notebooks/: 01_data_exploration.ipynb  02_model_comparison.ipynb  03_inference_demo.ipynb
src/: __init__.py  dataset.py  evaluate.py  gradcam.py  model.py  predict.py  preprocessing.py  train.py  utils.py  visualization.py
tests/: conftest.py  test_dataset.py  test_model.py  test_preprocessing.py  test_train_evaluate_predict.py  test_utils_and_gradcam.py
